# LLM-output-evaluation

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: api_comparison_suite.json  demo_extractor.py  example_suite.json  example_suite.yaml  fake_api.py  sample_suite_with_failures.json
examples/fixtures/: source.txt  summary.txt
llmval/: __init__.py  cli.py  core.py  embeddings.py  evaluators.py  jsonschema_mini.py  judge.py  report.py  runner.py  suite.py
tests/: test_evaluators.py
